--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ gtag('config', 'G-9086LN3SRR');
                     <div class="hamburger"></div>
                     <ul class="menu">
                         <li><a href="/herbs.html">HERBS</a></li>
+                        <li><a href="/preparations.html">PREPARATIONS</a></li>
                         <li><a href="/ailments.html">AILMENTS</a></li>
                         <li><a href="/equipment.html">EQUIPMENT</a></li>
                         <li><a href="/shop.html">SHOP</a></li>
@@ -56,7 +57,7 @@ gtag('config', 'G-9086LN3SRR');
                         <h1 class="playfair-display-regular" style="font-size: 96px; line-height: 1;">Learn Herbalism, Live Healthier</h1>
                         <p> Your beginner-friendly herbal encyclopedia for healing herbs, natural remedies, and home apothecary tools. Learn to harness nature's wisdom, one herb at a time.
                         </p>
-                        <a class="button-default" href="#">Explore the Herb Encyclopedia</a>
+                        <a class="ds-c-button-primary" href="#">Explore the Herb Encyclopedia</a>
                     </div>
                 </div>
             </div>
