--- a/preparations.html
+++ b/preparations.html
@@ -34,6 +34,7 @@ gtag('config', 'G-9086LN3SRR');
                     <div class="hamburger"></div>
                     <ul class="menu">
                         <li><a href="/herbs.html">HERBS</a></li>
+                        <li><a href="/preparations.html">PREPARATIONS</a></li>
                         <li><a href="/ailments.html">AILMENTS</a></li>
                         <li><a href="/equipment.html">EQUIPMENT</a></li>
                         <li><a href="/shop.html">SHOP</a></li>
@@ -54,6 +55,36 @@ gtag('config', 'G-9086LN3SRR');
 <p>Common methods include teas, which are made by steeping dried herbs in hot water, and infusions, where herbs are soaked in alcohol or oil to extract their active compounds. Decoctions involve boiling tougher plant parts like roots or bark to release their medicinal properties. Topical preparations such as creams and salves are often used for skin conditions, combining herbs with oils or beeswax.</p>
 <p>These traditional methods harness the healing power of plants, offering gentle and holistic approaches to wellness.</p>
 
+<h2>Teas</h2>
+<p>Teas are a traditional herbal preparation made by steeping dried plant parts, such as leaves, flowers, roots, or berries, in hot water.</p>
+<p>This method extracts active compounds from the plants, creating a soothing and easily consumable form of herbal medicine. In herbalism, teas are used to support digestion, relieve stress, promote sleep, and address various ailments depending on the plant used. They are often customized to suit individual health needs and are valued for their gentle and accessible nature.</p>
+<p>Teas remain a popular and time-honored practice in both traditional and modern herbal medicine.</p>
+
+<p>Learn more about <a href="/preparations/teas.html">teas</a>.</p>
+<h2>Tinctures</h2>
+<p>Tinctures are concentrated liquid extracts made by soaking plant materials in alcohol or another solvent.</p>
+<p>They are commonly used in herbalism to preserve the active compounds of herbs. Tinctures are typically taken orally in small doses and are valued for their potency and ease of use. They can be used to treat a variety of conditions, including colds, digestive issues, and skin ailments.</p>
+<p>This preparation allows for precise dosing and is a popular method for delivering herbal medicine.</p>
+
+<p>Learn more about <a href="/preparations/tinctures.html">tinctures</a>.</p>
+<h2>Decoctions</h2>
+<p>Decoctions are a traditional method of preparing herbal remedies by boiling plant materials in water to extract their active compounds.</p>
+<p>This process involves simmering roots, barks, seeds, or other tough plant parts for an extended period, allowing the medicinal properties to dissolve into the liquid. Decoctions are commonly used in herbalism to treat a variety of conditions, including digestive issues, respiratory ailments, and inflammation. The resulting liquid is often consumed as a tea or taken in specific dosages for therapeutic effects.</p>
+<p>This method is valued for its ability to harness the potent healing properties of herbs in a concentrated form.</p>
+
+<p>Learn more about <a href="/preparations/decoctions.html">decoctions</a>.</p>
+<h2>Essential Oils</h2>
+<p>Essential oils are concentrated extracts derived from various parts of plants, such as leaves, flowers, bark, and roots, through methods like steam distillation or cold pressing.</p>
+<p>These oils contain the plant's aromatic compounds and are highly potent, often used in small amounts for their therapeutic properties. In herbalism, essential oils are employed for their antimicrobial, anti-inflammatory, and calming effects, aiding in the treatment of ailments ranging from respiratory issues to stress and skin conditions. They can be applied topically, inhaled, or diluted for internal use under professional guidance.</p>
+<p>Due to their strength, proper dilution and safe usage are crucial to avoid adverse reactions.</p>
+
+<p>Learn more about <a href="/preparations/essential-oils.html">essential oils</a>.</p>
+<h2>Creams</h2>
+<p>Creams are topical herbal preparations made by combining plant-based ingredients with a base of oil, water, or both, often emulsified to create a smooth, spreadable texture.</p>
+<p>In herbalism, creams are used to deliver medicinal properties directly to the skin, providing relief for conditions like inflammation, eczema, or muscle pain. They may contain herbs such as aloe vera, calendula, or lavender, each offering specific therapeutic benefits. These preparations are commonly applied to affected areas for localized treatment.</p>
+<p>Creams are valued for their ability to soothe, heal, and protect the skin while leveraging the potency of natural botanicals.</p>
+
+<p>Learn more about <a href="/preparations/creams.html">creams</a>.</p>
 
                 </article>
             </main>
