--- a/preparations/decoctions/best.html
+++ b/preparations/decoctions/best.html
@@ -6,7 +6,7 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" href="/style.css">
-            <title>Herbal Decoctions</title>
+            <title>Medicinal Herbal Decoctions</title>
             <meta name="description" content="">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5617713055850335"
      crossorigin="anonymous"></script>
@@ -34,6 +34,7 @@ gtag('config', 'G-9086LN3SRR');
                     <div class="hamburger"></div>
                     <ul class="menu">
                         <li><a href="/herbs.html">HERBS</a></li>
+                        <li><a href="/preparations.html">PREPARATIONS</a></li>
                         <li><a href="/ailments.html">AILMENTS</a></li>
                         <li><a href="/equipment.html">EQUIPMENT</a></li>
                         <li><a href="/shop.html">SHOP</a></li>
@@ -46,10 +47,16 @@ gtag('config', 'G-9086LN3SRR');
                 <article class="article">
                     
         <section class="breadcrumbs">
-            <a href="/"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/></svg></a><span> > </span><a href="/preparations.html">Preparations</a><span> > Decoction</span>
+            <a href="/"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"/></svg></a><span> > </span><a href="/preparations.html">Preparations</a><span> > </span><a href="/preparations/decoctions.html">Decoctions</a><span> > Best</span>
         </section>
     
-                    <h1>Herbal Decoctions</h1>
+                    <h1>100 best decoctions for medicinal use</h1>
+<p>Decoctions are a traditional method of preparing herbal remedies by boiling plant materials in water to extract their active compounds.</p>
+<p>This process is commonly used in herbalism to make use of roots, bark, and other tough plant parts that cannot be easily dissolved in water. The resulting liquid is then strained and consumed as a tea or taken in other forms for its therapeutic effects. Decoctions are valued for their ability to deliver potent medicinal properties from the plant.</p>
+<p>They are often used to treat conditions such as digestive issues, respiratory ailments, and inflammatory disorders.</p>
+
+<ul></ul>
+
 
                 </article>
             </main>
