--- a/shop/save-your-herbal-stockpile-mini-guide-download.html
+++ b/shop/save-your-herbal-stockpile-mini-guide-download.html
@@ -53,7 +53,7 @@ gtag('config', 'G-9086LN3SRR');
                     <div class="flex-1">
                         <h1>Save Your Herbal Stockpile Mini Guide Download</h1>
                         
-                        <a class="ds-c-button-primary" href="/assets/shop/save-your-herbal-stockpile-mini-guide.pdf">DOWNLOAD THE MINI GUIDE</a>
+                        <a style="margin-bottom: 16px;" class="ds-c-button-primary" href="/assets/shop/save-your-herbal-stockpile-mini-guide.pdf">DOWNLOAD THE MINI GUIDE</a>
                     </div>
                     <img class="flex-1" style="object-fit: contain;" src="/images/shop/save-your-herbal-stockpile-mini-guide.jpg" alt="save your herbal stockpile mini guide">
                 </div>
