--- a/art/aesthetic.html
+++ b/art/aesthetic.html
@@ -27,9 +27,9 @@
         </section>
     
                 <div class="article container-md">
-                    <h1>10 Herbal Aesthetics For Herbalists Guide</h1>
+                    <h1>Herbal Aesthetics: Elevating Herbal Practice With Design</h1>
 <img src="/images/art/aesthetic/herbal-aesthetic.jpg" alt="herbal aesthetic.jpg">
-<p>In the world of herbalism, the art of aesthetics plays a vital role in both practice and presentation. Herbalists often blend tradition with creativity to enhance the therapeutic experience. This guide explores ten herbal aesthetics that can elevate the herbalist's craft and client engagement. From natural pigments to plant-based perfumes, each element is rooted in nature's wisdom. Embracing these aesthetic practices can deepen the connection between healer and healing plant.</p>
+<p>Herbal aesthetics explores the intersection of nature's remedies and creative design, transforming traditional herbal practices into visually compelling experiences. By integrating botanical elements with modern design principles, this approach enhances both the functionality and beauty of herbal spaces. It bridges the gap between science and art, offering a holistic way to engage with plants in daily life. The result is an environment that not only supports wellness but also inspires mindfulness and appreciation for the natural world. This article delves into how design can elevate herbal practice, making it more accessible and meaningful.</p>
 <h2>Green Aesthetics</h2>
 <img src="/images/art/aesthetic/green/green-aesthetic.jpg" alt="green aesthetic">
 <p>Integrating green aesthetics into our living spaces can significantly enhance our well-being. medicinal herbs not only beautify environments but also promote calm and relaxation. here are ten carefully selected herbs known for their calming properties and visual appeal. these plants can be easily incorporated into home decor or used in aromatherapy. each herb offers a unique blend of natural beauty and therapeutic benefits.</p>
@@ -52,8 +52,8 @@
 <p>See <a href="/art/aesthetic/black-white.html">10 black and white aesthetics healing visuals</a> for more.</p>
 <h2>Black Aesthetics</h2>
 <img src="/images/art/aesthetic/black/black-aesthetic.jpg" alt="black aesthetic">
-<p>Black aesthetics for herbalist spaces explore the fusion of cultural heritage and natural healing. this style embraces bold colors, organic textures, and symbolic motifs rooted in african traditions. it transforms herbalist environments into spaces of empowerment and wellness. the use of rich materials and meaningful artistry enhances the therapeutic experience. such designs celebrate identity while fostering a deeper connection to nature and self.</p>
-<p>See <a href="/art/aesthetic/black.html">Black aesthetics for herbalist spaces</a> for more.</p>
+<p>Black aesthetics and herbalist identity explore the deep connections between cultural expression and traditional healing practices. rooted in centuries of knowledge passed down through generations, these practices are more than just remedies—they are a form of resistance and empowerment. the visual and symbolic elements of black aesthetics often mirror the natural world, reflecting a profound respect for the earth and its gifts. herbalist identity is deeply intertwined with this aesthetic, as it embodies a holistic approach to health and self-care. together, they form a powerful narrative that celebrates both beauty and survival.</p>
+<p>See <a href="/art/aesthetic/black.html">Black aesthetics and herbalist identity</a> for more.</p>
 </div>
 
                 </div>
