--- a/art/aesthetic/black.html
+++ b/art/aesthetic/black.html
@@ -27,9 +27,9 @@
         </section>
     
                 <div class="article container-md">
-                    <h1>Black Aesthetics For Herbalist Spaces</h1>
+                    <h1>Black Aesthetics And Herbalist Identity</h1>
 <img src="/images/art/aesthetic/black/black-aesthetic.jpg" alt="black aesthetic.jpg">
-<p>Black aesthetics for herbalist spaces explore the fusion of cultural heritage and natural healing. This style embraces bold colors, organic textures, and symbolic motifs rooted in African traditions. It transforms herbalist environments into spaces of empowerment and wellness. The use of rich materials and meaningful artistry enhances the therapeutic experience. Such designs celebrate identity while fostering a deeper connection to nature and self.</p>
+<p>Black aesthetics and herbalist identity explore the deep connections between cultural expression and traditional healing practices. Rooted in centuries of knowledge passed down through generations, these practices are more than just remedies—they are a form of resistance and empowerment. The visual and symbolic elements of Black aesthetics often mirror the natural world, reflecting a profound respect for the earth and its gifts. Herbalist identity is deeply intertwined with this aesthetic, as it embodies a holistic approach to health and self-care. Together, they form a powerful narrative that celebrates both beauty and survival.</p>
 <h2>Black Aesthetic Wallpapers</h2>
 <img src="/images/art/aesthetic/black/wallpaper/black-aesthetic-wallpaper.jpg" alt="black aesthetic wallpaper">
 <p>The black aesthetic has gained immense popularity for its sleek and mysterious appeal. these wallpapers often feature deep shades of black paired with subtle textures and intricate patterns. herbal healing backgrounds add a calming and natural element to the design. they blend the power of nature with the elegance of minimalism. this combination offers a unique visual experience that promotes relaxation and mindfulness.</p>
