--- a/herbs/types.html
+++ b/herbs/types.html
@@ -28,10 +28,16 @@
     
                 <div class="article container-md">
                     <h1>Herb Types For Foundational Herbal Knowledge</h1>
+<img src="/images/herbs/types/herbs.jpg" alt="herbs.jpg">
+<p>Understanding the basics of herb types is essential for anyone seeking foundational herbal knowledge. Herbs can be broadly categorized into culinary, medicinal, and aromatic varieties each serving distinct purposes. Culinary herbs enhance flavor while medicinal herbs offer therapeutic benefits. Aromatic herbs are often used in perfumes and rituals. This article explores key herb types to build a strong foundation in herbal studies.</p>
 <h2>Medicinal Flowers</h2>
 <img src="/images/herbs/types/flowers/medicinal-flowers.jpg" alt="medicinal flowers">
-<p>Natural remedies have been used for centuries to promote health and wellness, and many of these come from the flowers that bloom around us. Medicinal flowers offer a wide range of healing properties, from reducing inflammation to boosting immunity. These plants are not only beautiful but also powerful in their ability to support the body's natural processes. Incorporating them into daily routines can be a simple yet effective way to enhance well-being. In this article, we will explore ten remarkable medicinal flowers that heal the body naturally.</p>
+<p>Natural remedies have been used for centuries to promote health and wellness, and many of these come from the flowers that bloom around us. medicinal flowers offer a wide range of healing properties, from reducing inflammation to boosting immunity. these plants are not only beautiful but also powerful in their ability to support the body's natural processes. incorporating them into daily routines can be a simple yet effective way to enhance well-being. in this article, we will explore ten remarkable medicinal flowers that heal the body naturally.</p>
 <p>See <a href="/herbs/types/flowers.html">10 medicinal flowers that heal the body naturally</a> for more.</p>
+<h2>Trees</h2>
+<img src="/images/herbs/types/trees/tree.jpg" alt="tree">
+<p>Trees have long been a source of medicinal knowledge across cultures and generations. their leaves, bark, flowers, and fruits contain compounds that can be used to create effective herbal remedies. from ancient traditions to modern pharmacology, trees continue to play a vital role in healing practices. the study of these natural resources offers insights into sustainable healthcare solutions. this article explores the diverse ways trees contribute to herbal remedies and treatments.</p>
+<p>See <a href="/herbs/types/trees.html">Trees: Trees for Herbal Remedies and Treatments</a> for more.</p>
 </div>
 
                 </div>
