--- a/shop.html
+++ b/shop.html
@@ -59,6 +59,13 @@ gtag('config', 'G-9086LN3SRR');
             <div class="grid-3" style="gap: 3.2rem; margin-bottom: 9.6rem;">
                 
                 <div class="card-default">
+                    <a href="/shop/checklist-foraging-fall.html">
+                        <h2 style="margin-bottom: 1.6rem;">Fall Foraging Checklist</h2>
+                        <img src="/images/shop/banner-checklist-foraging-fall.jpg" alt="fall foraging checklist">
+                    </a>
+                </div>
+            
+                <div class="card-default">
                     <a href="/shop/herb-drying-checklist.html">
                         <h2 style="margin-bottom: 1.6rem;">Herb Drying Checklist</h2>
                         <img src="/images/shop/herb-drying-checklist-blurred.jpg" alt="herb drying checklist blurred">
