--- a/shop/checklist-foraging-fall/download.html
+++ b/shop/checklist-foraging-fall/download.html
@@ -51,7 +51,7 @@ gtag('config', 'G-9086LN3SRR');
                 <img src="/images/shop/checklist-foraging-fall.jpg" alt="fall foraging checklist">
             </div>
             <div style="text-align: center;" >
-                <a class="button-default" href="/images/shop/checklist-foraging-fall.jpg">DOWNLOAD CHECKLIST (HD)</a>
+                <a class="button-accent" href="/images/shop/checklist-foraging-fall.jpg">DOWNLOAD CHECKLIST (HD)</a>
             </div>
         </div>
     
