--- a/shop.html
+++ b/shop.html
@@ -61,14 +61,14 @@ gtag('config', 'G-9086LN3SRR');
                 <div class="card-default">
                     <a href="/shop/checklist-foraging-fall.html">
                         <h2 style="margin-bottom: 1.6rem;">Fall Foraging Herbs (Checklist)</h2>
-                        <img src="/images/shop/banner-checklist-foraging-fall.jpg" alt="fall foraging checklist">
+                        <img src="/images/shop/checklist-foraging-fall-banner.jpg" alt="fall foraging herbs checklist">
                     </a>
                 </div>
             
                 <div class="card-default">
                     <a href="/shop/quick-start-guide-preparation-lotion.html">
                         <h2 style="margin-bottom: 1.6rem;">Make Your First Herbal Lotion (Quick-Start Guide)</h2>
-                        <img src="/images/shop/quick-start-guide-preparation-lotion-banner.jpg" alt="banner of the herbal lotion preparation quick-start guide">
+                        <img src="/images/shop/quick-start-guide-preparation-lotion-banner.jpg" alt="lotion preparation quick-start guide banner">
                     </a>
                 </div>
             
