--- a/shop/checklist-foraging-fall.html
+++ b/shop/checklist-foraging-fall.html
@@ -54,10 +54,10 @@ gtag('config', 'G-9086LN3SRR');
                 
         <div class='product'>
             <p style="text-align: center; margin-bottom: 1.6rem;">FREE DOWNLOAD</p>
-            <h1 style="text-align: center; margin-bottom: 1.6rem;">Fall Foraging Checklist</h1>
+            <h1 style="text-align: center; margin-bottom: 1.6rem;">Fall Foraging Herbs (Checklist)</h1>
             <p style="text-align: center; margin-bottom: 3.2rem;">This checklist includes a list of healing herbs to forage in the fall season (for the months of October, November, and December). It includes the names of the plants (common and botanical), the primary parts of the plants to forage, and their main therapeutic actions.</p>
             <div class="container-sm" style="margin-bottom: 1.6rem;">
-                <img src="/images/shop/banner-checklist-foraging-fall.jpg" alt="fall foraging checklist banner">
+                <img src="/images/shop/checklist-foraging-fall-banner.jpg" alt="fall foraging herbs checklist">
             </div>
             <p style="text-align: center; margin-bottom: 1.6rem;">Where do you want me to send your free download? Enter your best email address in the form below.</p>
             <div class="ml-embedded" data-form="eiaxk3"></div>
