--- a/shop/quick-start-guide-preparation-lotion.html
+++ b/shop/quick-start-guide-preparation-lotion.html
@@ -57,10 +57,10 @@ gtag('config', 'G-9086LN3SRR');
             <h1 style="text-align: center; margin-bottom: 1.6rem;">Make Your First Herbal Lotion (Quick-Start Guide)</h1>
             <p style="text-align: center; margin-bottom: 3.2rem;">How to make your first medicinal herbal lotion in 30 minutes or less (including waiting time).</p>
             <div class="container-sm" style="margin-bottom: 1.6rem;">
-                <img src="/images/shop/quick-start-guide-preparation-lotion-banner.jpg" alt="banner of the herbal lotion preparation quick-start guide">
+                <img src="/images/shop/quick-start-guide-preparation-lotion-banner.jpg" alt="lotion preparation quick-start guide banner">
             </div>
             <p style="text-align: center; margin-bottom: 1.6rem;">Where do you want me to send your free download? Enter your best email address in the form below.</p>
-            <div class="ml-embedded" data-form="1Y17r0"></div>
+            <div class="ml-embedded" data-form="eiaxk3"></div>
 
         </div>
     
